# sarang-kepiting

./: .env  Cargo.toml
migrations/: 20250331170551_create_log_visitors.sql  20250401210339_create_users.sql  20250401211313_create_users_auth.sql  20250401212754_create_notes_lists.sql  20250401212946_create_notes_tags.sql  20250518212946_create_notes_tags.sql  20250519195548_add-snippet-to-notes-lists.sql
src/: main.rs  routes.rs
src/config/: database.rs
src/features/: mod.rs
src/features/hello/: handler.rs
src/features/notes/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/features/passgen/: handler.rs  model.rs
src/middlewares/: middleman.rs  mod.rs  response.rs
src/models/: app_model.rs  mod.rs
src/utils/: custom_response.rs  custom_trait.rs  date_jakarta.rs  mod.rs  password_generator.rs
