[package]
name = "be-sarangkepiting"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fake = { version = "4", features = ["derive"] }
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
regex = "1.11.1"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.2"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "chrono"
] }
thiserror = "2.0.12"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.21.3"
async-trait = "0.1.88"
